# hhc-n818op-plugins

./: .env.docker  .env.in  .flake8  .gitattributes  .gitignore  .pylint.toml  Makefile  README.md  pyproject.toml
.github/workflows/: package-release.yml
daemon_hhc_n818op/: __init__.py
daemon_hhc_n818op/plugins/: __init__.py
daemon_hhc_n818op/plugins/athom/: __init__.py  athom_smart_client_home_http.py
daemon_hhc_n818op/plugins/meross/: __init__.py  meross_client_cloud_mqtt.py  meross_cloud_credentials.json  meross_registry.json
plugins/: __init__.py
plugins/athom/: __init__.py  athom_smart_client_home_http.py
plugins/meross/: __init__.py  meross_client_cloud_mqtt.py
src/daemon_hhc_n818op/plugins/: __init__.py
src/daemon_hhc_n818op/plugins/athom/: __init__.py  athom_smart_client_home_http.py
src/daemon_hhc_n818op/plugins/meross/: __init__.py  meross_client_cloud_mqtt.py
src/daemon_hhc_n818op/plugins/meross/config/: meross_profile.json  meross_registry.json
